@@ -45,7 +45,7 @@ class optional_build_ext(build_ext):
 
 setup(
     name = 'Jinja',
-    version = '1.0',
+    version = '1.1',
     url = 'http://jinja.pocoo.org/',
     license = 'BSD',
     author = 'Armin Ronacher',
